# cpp_project_template

./: .buildinfo  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Doxyfile.docs  Makefile  README.md  cmake_install.cmake  compile_commands.json  conanfile.txt  conf.py  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
.conan/profiles/: clang  gcc
.doctrees/: environment.pickle  index.doctree
.github/actions/configure/: action.yml
.github/workflows/: deploy_docs.yml  run_tests.yml  unit_tests.yml
docs/: conf.py.in  index.rst
generators/: CMakePresets.json  FindGTest.cmake  GTest-release-x86_64-data.cmake  GTestConfig.cmake  GTestConfigVersion.cmake  benchmark-Target-release.cmake  benchmark-config-version.cmake  benchmark-config.cmake  benchmark-release-x86_64-data.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanbuildenv-release-x86_64.sh  deactivate_conanrun.sh
include/cpp_project_template/: simple_library.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  simple_library.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  simple_test.cpp  unit_tests[1]_include.cmake
xml/: classsimple__library.xml  dir_48c008ff697168d0a7e47d20f0a8be41.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  simple__library_8h.xml
